--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.1"
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
+    "mongoose-unique-validator": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
