--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
